<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboard.OnboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/product_image_placeholder"
                android:scaleType="center"
                android:src="@drawable/ic_placeholder_image"
                android:tint="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="1"
                    android:lineSpacingExtra="4sp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="0"
                    android:textSize="24sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="?android:attr/listDivider">

        <TextView
            android:id="@+id/detail_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/detail_amount"
            android:textSize="24sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/detail_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:fontFamily="@font/roboto_black"
            android:textSize="24sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/detail_quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/detail_quantity"
            android:textSize="24sp"
            android:visibility="gone"  />

        <ImageButton
            android:id="@+id/detail_quantity_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_minus_contentDescription"
            android:paddingTop="@dimen/button_padding_vertical"
            android:paddingBottom="@dimen/button_padding_vertical"
            android:paddingLeft="@dimen/button_padding_horizontal"
            android:paddingRight="@dimen/button_padding_horizontal"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:src="@drawable/ic_minus"
            android:visibility="gone"  />

        <TextView
            android:id="@+id/detail_quantity"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:textSize="24sp"
            android:visibility="gone"  />

        <ImageButton
            android:id="@+id/detail_quantity_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_plus_contentDescription"
            android:paddingTop="@dimen/button_padding_vertical"
            android:paddingBottom="@dimen/button_padding_vertical"
            android:paddingLeft="@dimen/button_padding_horizontal"
            android:paddingRight="@dimen/button_padding_horizontal"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:src="@drawable/ic_add"
            android:visibility="gone"  />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detail_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="34dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_check"
        android:tint="@android:color/white"
        app:rippleColor="@color/colorPrimaryLight" />
</RelativeLayout>